discussion/kv_engine/187792/187792_rev4_discussion.txt
======================================================================================================================
DESCRIPTION:

Change the protocol specification to be usable on the server

Uniquely identify the "URL" of a document by inserting
the scope id, collection id, vbucket id in the request.
By keeping this in its own message we only need to
document it once (and changes / bug fixes only needs
to be fixed in one place rather in all messages which
needs the extension later on)

The scope/collection id vs names is an optimization so
that the server don't need to perform the textual lookup
every time (and in order for sane operation the client
would have to pass along the uuid to avoid undefined
behavior after a drop/recreate).

By passing along the vbucket id the server don't need
to be in the "proxy business" and can leave that to
a stellar gateway or the client. (The stellar gateway
could tell the clients that it is responsible for all
vbuckets and perform all proxying and not-my-vbucket
handling).

I've not looked at the returned data.

Change-Id: I98a9140b99b11540c5b2a6b94096b63d8c842551

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2023-03-07 08:23:38.000000000
Message: 
Uploaded patch set 4.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2023-03-07 08:42:40.000000000
Message: 
Patch Set 4: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1658/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/1658/ )

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12590/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/12590/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24921/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/24921/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25378/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/25378/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26231/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/26231/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33337/ : ABORTED

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/33337/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22858/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_command_context.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_cookie.h:20:10: error: "grpcpp/server.h" file not found [clang-diagnostic-error]
#include <grpcpp/server.h>
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_get_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_mutate_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_remove_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_service.cc:18:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_unlock_command.h:19:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/programs/grpc/main.cc:17:10: error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
#include "kv.v1.grpc.pb.h"
         ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22858/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/daemon/protocol/grpc/rpc_arithmetic_command.h:19:10:
error: "kv.v1.grpc.pb.h" file not found [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/22858/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23083/ : FAILURE

<p>clang-format suggested the following changes:

<pre>
cat <<"EOF" | patch -p1
diff --git a/daemon/protocol/grpc/rpc_arithmetic_command.h b/daemon/protocol/grpc/rpc_arithmetic_command.h
index d0faa9203..fb3f1b47e 100644
--- a/daemon/protocol/grpc/rpc_arithmetic_command.h
+++ b/daemon/protocol/grpc/rpc_arithmetic_command.h
@@ -38,8 +38,8 @@ protected:
 class RpcCounterCommand : public RpcArithmeticCommand {
 public:
     RpcCounterCommand(::grpc::ServerContext* context,
-                        const ::couchbase::kv::v1::CounterRequest* request,
-                        ::couchbase::kv::v1::CounterResponse* response);
+                      const ::couchbase::kv::v1::CounterRequest* request,
+                      ::couchbase::kv::v1::CounterResponse* response);
 
 protected:
     std::string getBucketName() override;

EOF
</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/23083/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52308/ : FAILURE

Failure of GoogleTest "EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction":

<pre>
[ RUN      ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(137): error: Expected: (0) != (cb::ArenaMalloc::getPreciseAllocated(engine->getArenaMallocClient(), cb::MemoryDomain::Primary)), actual: 0 vs 0
[  FAILED  ] EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction, where GetParam() = "backend=magma:bucket_type=persistent:item_eviction_policy=full_eviction" (185 ms)
EphemeralOrPersistent/BucketQuotaChangeTest.QuotaChangeDownMemoryUsageHigh/magma_persistent_full_eviction
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/52308/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24492/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/24492/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/43874/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/12670/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
